# kraftjar-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  biome.json  build_static.sh  config.py  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.yml  docker-compose.yml.prod  example_credentials.json  package.json  project.env  pyproject.toml  webpack.config.js
.github/workflows/: build_deploy.yaml  test.yaml
api/: utils.py
api/controllers/: __init__.py  application.py  auth.py  file.py  job.py  location.py  push_notification.py  rate.py  registration.py  service.py  user.py
api/dependency/: __init__.py  s3_client.py  user.py
api/routes/: __init__.py  application.py  auth.py  device.py  job.py  location.py  profession.py  push_notification.py  rate.py  rates.py  registration.py  service.py  user.py  whoami.py
api/utility/: __init__.py  address.py  applications.py  field.py  fields.json  job.py  location.py  profession.py  service.py  user.py
app/: __init__.py  database.py
app/commands/: __init__.py  addresses.py  addresses_api.py  cities.py  filter.py  job.py  locations.py  rate.py  rayons.py  rayons_json.py  service.py  settlements.py  update_addresses_api.py  user.py  utility.py
app/controllers/: jinja_controllers.py  jinja_globals.py
data/: address.json  cities.json  jobs.json  locations.json  rayons.json  regions.json  services.json  users.json  users_old.json
migrations/: env.py
src/: admin.ts  field.ts  region.ts  service.ts  styles.css  user.ts
test_api/: conftest.py  test.env  test_applications.py  test_auth.py  test_data.json  test_data.py  test_device.py  test_job.py  test_jobs.py  test_locations.py  test_professions.py  test_push_notification.py  test_rate.py  test_register.py  test_service.py  test_users.py  test_whoami.py  utils.py
test_flask/: conftest.py  test.env  test_admins.py  test_auth.py  test_fields.py  test_jobs.py  test_rate.py  test_regions.py  test_services.py  test_users.py  utils.py
(+156 files in other folders)
